--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
 
-    <title>React App</title>
+    <title>Real Time Chats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
